--- a/Lec11/appsettings.Development.json
+++ b/Lec11/appsettings.Development.json
@@ -14,7 +14,11 @@
   },
   "MyNewBook": {
     "NewBookRelease": false,
-    "NewBookName":  "ABC new book"
+    "NewBookName":  "XYZ new book"
+  },
+  "ThridBook": {
+    "NewBookRelease": false,
+    "NewBookName":  "XYZ third book"
   }
 
 }
