--- a/Lec11/appsettings.Development.json
+++ b/Lec11/appsettings.Development.json
@@ -6,6 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "MyLoginPath": {
+    "LoginPath": "/login",
+    "AppDomain": "https: //localhost:44333/",
+    "EmailConfirmation": "Email-Confirmation?uid={0}&token={1}",
+    "PasswordReset": "reset-password?uid={0}&token={1}"
+
+  },
   "MyAlert":  true,
   "key1": "value of Key 1 D",
   "key2": "value of key 2 D",
@@ -18,7 +25,20 @@
   },
   "ThridBook": {
     "NewBookRelease": false,
-    "NewBookName":  "XYZ third book"
+    "NewBookName": "XYZ third book"
+  },
+  "SMTPMailTesting": {
+    "SenderAddres": "no-reply@gmail.com",
+    "SenderDisplayName":  "BookStore.com",
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 25,
+    "Username": "1c926854b836eb",
+    "Password": "472357a9b50ab1",
+    "EnableSSL": true,
+    "UseDefaultCredentails": true,
+    "IsBodyHTML":  true,
+    "Auth": "PLAIN LOGIN and CRAM-MD5",
+    "TLS": "Optional (STARTTLS on allports)"
   }
 
 }
